начато fначат form

--- a/source/form.html
+++ b/source/form.html
@@ -7,10 +7,10 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+     <header class="page-header">
       <div class="page-header__wrapper">
-        <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
-        <a class="page-header__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+        <img class="page-header__icon" src="img/icon-logo-mobile.svg" alt="Логотип Cat Energy">
+        <a class="page-header__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <label class="page-header__menu-button" for="menu_switch"></label>
       </div>
       <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
@@ -41,11 +41,11 @@
             <input type="text" placeholder="БАРСИК" name="cat-name" required>
             </label>
             <label class="form-cat-info__item">
-            вес(кг):<sup>*</sup>
+            вес (кг):<sup>*</sup>
             <input type="text" placeholder="7" name="cat-weight" required>
             </label>
             <label class="form-cat-info__item">
-            возраст(лет):
+            возраст (лет):
             <input type="text" placeholder="7" name="cat-age" >
             </label>
           </div>
