--- a/source/form.html
+++ b/source/form.html
@@ -85,49 +85,51 @@
         <div class="selection__item extra">
           <h2 class="extra__caption">Дополнительно</h2>
           <div class="extra__item-wrapper">
-            <label class="extra__item">
-            <input type="checkbox" name="extra" value="sweetener" checked>
-            сахарозаменитель
+            <label>
+            <input type="checkbox" id="extra__checkbox1" name="extra" value="sweetener" checked>
+              <span class="extra__item extra__item--1">сахарозаменитель</span>
             </label>
-            <label class="extra__item">
-            <input type="checkbox" name="extra" value="water">
-            питьевая вода
+            <label>
+            <input type="checkbox" id="extra__checkbox2" name="extra" value="water">
+              <span class="extra__item extra__item--2">питьевая вода</span>
             </label>
-            <label class="extra__item">
-            <input type="checkbox" name="extra" value="milk">
-            молоко
+            <label>
+            <input type="checkbox" id="extra__checkbox3" name="extra" value="milk">
+              <span class="extra__item extra__item--3">молоко</span>
             </label>
-            <label class="extra__item">
-            <input type="checkbox" name="extra" value="vitamins">
-            витамины
+            <label>
+            <input type="checkbox" id="extra__checkbox4" name="extra" value="vitamins">
+              <span class="extra__item extra__item--4">витамины</span>
             </label>
           </div>
         </div>
         <button type="submit" class="selection-button button">отправить заявку</button>
-        <small class="selection__notice"><sup>*</sup>-Обязательные поля</small>
+        <small class="selection__notice"><sup>*</sup> — Обязательные поля</small>
       </form>
     </main>
     <footer class="page-footer">
-      <section class="partnership">
+      <section class="partnership partnership--form ">
         <div class="partnership__wrapper">
-          <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
-          <p class="partnership__address">
-            ул. Большая Конюшенная, д.19/8 Санкт-Петербург
+          <h3 class="partnership__invite">приглашаем
+к сотрудничеству дилеров!</h3>
+          <p class="partnership__address">ул. Большая Конюшенная, д. 19/8
+
+Санкт-Петербург
           </p>
         </div>
       </section>
-      <div class="map-wrapper">map
+      <div class="page-footer__map-wrapper">map
       </div>
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+        <a class="page-footer__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <div class="page-footer__social social">
-          <a class="social__link social__link--vkontakte" href="#">vkontante</a>
-          <a class="social__link social__link--instagram" href="#">instagram</a>
-          <a class="social__link social__link--facebook" href="#">facebook</a>
+          <a class="social__link social__link--vkontakte" href="#"></a>
+          <a class="social__link social__link--instagram" href="#"></a>
+          <a class="social__link social__link--facebook" href="#"></a>
         </div>
         <div class="page-footer__developers developers">
           <a class="developers__item developers__item--text" href="#">HTML Academy</a>
-          <a class="developers__item developers__item--pic" href="#">Логотип HTML Academy</a>
+          <a class="developers__item developers__item--logo" href="#"></a>
         </div>
       </div>
     </footer>
