index form catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,31 +8,38 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrapper">
-        <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
-        <a class="page-header__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
-        <input id="menu_sw" type="checkbox">
-        <label for="menu_sw">Открыть меню</label>
+        <img class="page-header__icon" src="img/icon-logo-mobile.svg" alt="Логотип Cat Energy">
+        <a class="page-header__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
+        <label class="page-header__menu-button" for="menu_switch"></label>
       </div>
-      <nav class="page-header__nav main-nav">
-        <ul class="main-nav__list ">
-          <li class="main-nav__item main-nav__item--catalog">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="main-nav__item main-nav__item--active main-nav__item--catalog">
-            <a>Каталог продукции</a>
-          </li>
-          <li class="main-nav__item main-nav__item--catalog">
-            <a href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+      <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
+      <div class="page-header__nav-wrapper">
+        <nav class="page-header__nav main-nav">
+          <ul class="main-nav__list ">
+            <li class="main-nav__item main-nav__item--black">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item main-nav__item--black">
+              <a>Каталог продукции</a>
+            </li>
+            <li class="main-nav__item main-nav__item--black main-nav__item--active">
+              <a href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="page-catalog">
       <div class="page-catalog__wrapper">
         <h1 class="page-catalog__caption">Каталог продукции</h1>
         <section class="catalog">
-          <article class="catalog__item catalog__item--chicken-small">
-            <a class="catalog__link" href="#"><img src="../530049-cat-energy/source/img/chicken-big-mobile@1x.jpg" alt="Cat Energy pro 1000"></a>
+          <article class="catalog__item">
+            <a class="catalog__link catalog__link--small" href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-chiken500.png">
+                <img src="img/catalog/mob-chiken500.png">
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption" href="#">
                 <h3>cat energy pro 500 г</h3>
@@ -40,7 +47,7 @@
               <table class="catalog__table table">
                 <tr class="table__row">
                   <th class="table__column table__column--left">Объем</th>
-                  <td class="table__column table__column--right">500Г</td>
+                  <td class="table__column table__column--right">500 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -48,14 +55,19 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">700 Р</td>
+                  <td class="table__column table__column--right">700 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--chicken-big">
-            <a class="catalog__link" href="#"><img src="../530049-cat-energy/source/img/chicken-small-mobile@1x.jpg" alt="Cat Energy pro 500"></a>
+          <article class="catalog__item">
+            <a class="catalog__link  catalog__link--big" href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-chiken1000.png">
+                <img src="img/catalog/mob-chiken1000.png">
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy pro 1000 г</h3>
@@ -63,7 +75,7 @@
               <table class="catalog__table table">
                 <tr class="table__row">
                   <th class="table__column table__column--left">Объем</th>
-                  <td class="table__column table__column--right">1000Г</td>
+                  <td class="table__column table__column--right">1000 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -71,22 +83,27 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">1000 Р</td>
+                  <td class="table__column table__column--right">1000 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--fish">
-            <a class="catalog__link" href="#"><img src="../530049-cat-energy/source/img/fish-big-mobile@1x.jpg" alt="Cat Energy pro 1000"></a>
+          <article class="catalog__item">
+            <a class="catalog__link  catalog__link--small" href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-fish500.png">
+                <img src="img/catalog/mob-fish500.png" >
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy pro 500 г</h3>
               </a>
               <table class="catalog__table table">
                 <tr class="table__row">
-                  <th class="table__column--left">Объем</th>
-                  <td class="table__column--right">500Г</td>
+                  <th class="table__column table__column--left">Объем</th>
+                  <td class="table__column table__column--right">500 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -94,14 +111,19 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">700 Р</td>
+                  <td class="table__column table__column--right">700 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--fish-big">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+          <article class="catalog__item">
+            <a class="catalog__link catalog__link--big" href="#">
+            <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-fish1000.png">
+                <img src="img/catalog/mob-fish1000.png" >
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy pro 1000 г</h3>
@@ -109,7 +131,7 @@
               <table class="catalog__table table">
                 <tr class="table__row">
                   <th class="table__column table__column--left">Объем</th>
-                  <td class="table__column table__column--right">1000Г</td>
+                  <td class="table__column table__column--right">1000 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -117,14 +139,19 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">1000 Р</td>
+                  <td class="table__column table__column--right">1000 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--buckwheat">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+          <article class="catalog__item">
+            <a class="catalog__link  catalog__link--small" href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-gr500.png">
+                <img src="img/catalog/mob-gr500.png">
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy slim 500 г</h3>
@@ -132,7 +159,7 @@
               <table class="catalog__table table">
                 <tr class="table__row">
                   <th class="table__column table__column--left">Объем</th>
-                  <td class="table__column table__column--right">500Г</td>
+                  <td class="table__column table__column--right">500 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -140,14 +167,19 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">400 Р</td>
+                  <td class="table__column table__column--right">400 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--buckwheat-big">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+          <article class="catalog__item">
+            <a class="catalog__link catalog__link--big" href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-gr1000.png">
+                <img src="img/catalog/mob-gr1000.png">
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy slim 1000 г</h3>
@@ -155,7 +187,7 @@
               <table class="catalog__table table">
                 <tr class="table__row">
                   <th class="table__column table__column--left">Объем</th>
-                  <td class="table__column table__column--right">500Г</td>
+                  <td class="table__column table__column--right">500 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -163,14 +195,19 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">700 Р</td>
+                  <td class="table__column table__column--right">700 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--rice">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+          <article class="catalog__item">
+            <a class="catalog__link catalog__link--small" href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/catalog/tab-rice500.png">
+                <img src="img/catalog/mob-rice500.png">
+              </picture>
+            </a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy slim 500 г</h3>
@@ -178,7 +215,7 @@
               <table class="catalog__table table">
                 <tr class="table__row">
                   <th class="table__column table__column--left">Объем</th>
-                  <td class="table__column table__column--right">500Г</td>
+                  <td class="table__column table__column--right">500 г</td>
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Вкус</th>
@@ -186,15 +223,15 @@
                 </tr>
                 <tr class="table__row">
                   <th class="table__column table__column--left">Цена</th>
-                  <td class="table__column table__column--right">500 Р</td>
+                  <td class="table__column table__column--right">500 Р.</td>
                 </tr>
               </table>
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item">
-            <a class="catalog__plus-button" href="#">+</a>
-            <h3 class="catalog__caption">показать ещё 100500 товаров</h3>
+          <article class="catalog__item catalog__item--more">
+            <a class="catalog__plus-button" href="#"></a>
+            <h3 class="catalog__caption catalog__caption--plus">показать ещё 100500 товаров</h3>
             <small class="catalog__small">На самом деле вкусов гораздо больше!</small>
             <a class="catalog__button catalog__button--more button" href="#">показать всё</a>
           </article>
@@ -207,10 +244,10 @@
                 <a class="additional-goods__name" href="#">
                   <h3>сахарозаменитель</h3>
                 </a>
-                <table class="additional-goods__table table">
+                <table class="additional-goods__table table table--addictional">
                   <tr class="table__row">
-                    <th class="table__column table__column--left">1 Упаковка</th>
-                    <td class="table__column table__column--right">100 Р</td>
+                    <th class="table__column table__column--left">1 упаковка (100 г)</th>
+                    <td class="table__column table__column--right">200 Р.</td>
                   </tr>
                 </table>
                 <a class="additional-goods__button button" href="#">Заказать</a>
@@ -219,10 +256,10 @@
                 <a class="additional-goods__name" href="#">
                   <h3>питьевая вода</h3>
                 </a>
-                <table class="additional-goods__table table">
+                <table class="additional-goods__table table table--addictional">
                   <tr class="table__row">
                     <th class="table__column table__column--left">5 литров</th>
-                    <td class="table__column table__column--right">50 Р</td>
+                    <td class="table__column table__column--right">50 Р.</td>
                   </tr>
                 </table>
                 <a class="additional-goods__button button" href="#">Заказать</a>
@@ -231,10 +268,10 @@
                 <a class="additional-goods__name" href="#">
                   <h3>молоко</h3>
                 </a>
-                <table class="additional-goods__table table">
+                <table class="additional-goods__table table table--addictional">
                   <tr class="table__row">
                     <th class="table__column table__column--left">1 литр</th>
-                    <td class="table__column table__column--right">100 Р</td>
+                    <td class="table__column table__column--right">100 Р.</td>
                   </tr>
                 </table>
                 <a class="additional-goods__button button" href="#">Заказать</a>
@@ -243,43 +280,46 @@
                 <a class="additional-goods__name" href="#">
                   <h3>витамины</h3>
                 </a>
-                <table class="additional-goods__table table">
+                <table class="additional-goods__table table table--addictional">
                   <tr class="table__row">
                     <th class="table__column table__column--left">1 Упаковка (30 г)</th>
-                    <td class="table__column table__column--right">300 Р</td>
+                    <td class="table__column table__column--right">300 Р.</td>
                   </tr>
                 </table>
                 <a class="additional-goods__button button" href="#">Заказать</a>
               </article>
             </div>
             <article class="additional-goods__promo">
-              <span class="additional-goods__promo-item"> Закажите все и получите чехол для кота в подарок!</span>
+              <span class="additional-goods__promo-item"> Закажите все
+и получите чехол для кота в подарок!</span>
             </article>
           </div>
         </section>
       </div>
     </main>
     <footer class="page-footer">
-      <section class="partnership">
+      <section class="partnership partnership--form">
         <div class="partnership__wrapper">
-          <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
-          <p class="partnership__address">
-            ул. Большая Конюшенная, д.19/8 Санкт-Петербург
+          <h3 class="partnership__invite">приглашаем
+к сотрудничеству дилеров!</h3>
+          <p class="partnership__address">ул. Большая Конюшенная, д. 19/8
+
+Санкт-Петербург
           </p>
         </div>
       </section>
-      <div class="map-wrapper">map
+      <div class="page-footer__map-wrapper">map
       </div>
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+        <a class="page-footer__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <div class="page-footer__social social">
-          <a class="social__link social__link--vkontakte" href="#">vkontante</a>
-          <a class="social__link social__link--instagram" href="#">instagram</a>
-          <a class="social__link social__link--facebook" href="#">facebook</a>
+          <a class="social__link social__link--vkontakte" href="#"></a>
+          <a class="social__link social__link--instagram" href="#"></a>
+          <a class="social__link social__link--facebook" href="#"></a>
         </div>
         <div class="page-footer__developers developers">
           <a class="developers__item developers__item--text" href="#">HTML Academy</a>
-          <a class="developers__item developers__item--pic" href="#">Логотип HTML Academy</a>
+          <a class="developers__item developers__item--logo" href="#"></a>
         </div>
       </div>
     </footer>
