--- a/source/form.html
+++ b/source/form.html
@@ -18,13 +18,13 @@
         <nav class="page-header__nav main-nav">
           <ul class="main-nav__list ">
             <li class="main-nav__item main-nav__item--black">
-              <a>Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li class="main-nav__item main-nav__item--black">
               <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item main-nav__item--black main-nav__item--active">
-              <a href="form.html">Подбор программы</a>
+              <a>Подбор программы</a>
             </li>
           </ul>
         </nav>
