--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,14 +2,23 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Кэт энерджи</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
       <div class="page-header__wrapper">
-        <img class="page-header__icon" src="img/icon-logo-mobile.svg" alt="Логотип Cat Energy">
-        <a class="page-header__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
+        <a class="page-header__logo-adaptive" href="#">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__icon" src="img/logo-mobile.png" alt="Логотип Cat Energy">
+          </picture>
+        </a>
+        <a class="page-header__logo" href="#">
+          <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <label class="page-header__menu-button" for="menu_switch"></label>
       </div>
       <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
@@ -19,10 +28,10 @@
             <li class="main-nav__item main-nav__item--black">
               <a href="index.html">Главная</a>
             </li>
-            <li class="main-nav__item main-nav__item--black">
+            <li class="main-nav__item main-nav__item--active main-nav__item--black">
               <a>Каталог продукции</a>
             </li>
-            <li class="main-nav__item main-nav__item--black main-nav__item--active">
+            <li class="main-nav__item main-nav__item--black">
               <a href="form.html">Подбор программы</a>
             </li>
           </ul>
@@ -36,8 +45,9 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-chiken500.png">
-                <img src="img/catalog/mob-chiken500.png">
+                <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                <img src="img/chicken-small-mobile@1x.png" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="chicken 500g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -64,8 +74,9 @@
           <article class="catalog__item">
             <a class="catalog__link  catalog__link--big" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-chiken1000.png">
-                <img src="img/catalog/mob-chiken1000.png">
+                <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                <img src="img/chicken-big-mobile@1x.png" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="chicken 1000g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -92,8 +103,9 @@
           <article class="catalog__item">
             <a class="catalog__link  catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-fish500.png">
-                <img src="img/catalog/mob-fish500.png" >
+                <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                <img src="img/fish-small-mobile@1x.png" srcset="img/fish-small-mobile@2x.jpg 2x" alt="fish 500g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -119,9 +131,10 @@
           </article>
           <article class="catalog__item">
             <a class="catalog__link catalog__link--big" href="#">
-            <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-fish1000.png">
-                <img src="img/catalog/mob-fish1000.png" >
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                <img src="img/fish-big-mobile@1x.png" srcset="img/fish-big-mobile@2x.jpg 2x" alt="fish 1000g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -148,8 +161,9 @@
           <article class="catalog__item">
             <a class="catalog__link  catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-gr500.png">
-                <img src="img/catalog/mob-gr500.png">
+                <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                <img src="img/buckwheat-small-mobile@1x.png" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="buckwheat 500g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -176,8 +190,9 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--big" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-gr1000.png">
-                <img src="img/catalog/mob-gr1000.png">
+                <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                <img src="img/buckwheat-big-mobile@1x.png" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="buckwheat 1000g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -204,8 +219,9 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/catalog/tab-rice500.png">
-                <img src="img/catalog/mob-rice500.png">
+                <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                <img src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="buckwheat 500g">
               </picture>
             </a>
             <div class="catalog__wrapper">
@@ -298,7 +314,7 @@
       </div>
     </main>
     <footer class="page-footer">
-      <section class="partnership partnership--form">
+      <section class="partnership">
         <div class="partnership__wrapper">
           <h3 class="partnership__invite">приглашаем
 к сотрудничеству дилеров!</h3>
@@ -308,7 +324,7 @@
           </p>
         </div>
       </section>
-      <div class="page-footer__map-wrapper">map
+      <div class="page-footer__map-wrapper" id="map">
       </div>
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
@@ -323,5 +339,7 @@
         </div>
       </div>
     </footer>
+    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
