--- a/source/form.html
+++ b/source/form.html
@@ -2,15 +2,23 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Кэт энерджи</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-     <header class="page-header">
+    <header class="page-header">
       <div class="page-header__wrapper">
-        <img class="page-header__icon" src="img/icon-logo-mobile.svg" alt="Логотип Cat Energy">
-        <a class="page-header__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
+        <a class="page-header__logo-adaptive" href="#">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__icon" src="img/logo-mobile.png" alt="Логотип Cat Energy">
+          </picture>
+        </a>
+        <a class="page-header__logo" href="#">
+          <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <label class="page-header__menu-button" for="menu_switch"></label>
       </div>
       <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
@@ -20,10 +28,10 @@
             <li class="main-nav__item main-nav__item--black">
               <a href="index.html">Главная</a>
             </li>
-            <li class="main-nav__item main-nav__item--black">
+            <li class="main-nav__item main-nav__item--active main-nav__item--black">
               <a href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="main-nav__item main-nav__item--black main-nav__item--active">
+            <li class="main-nav__item main-nav__item--active main-nav__item--black">
               <a>Подбор программы</a>
             </li>
           </ul>
@@ -108,7 +116,7 @@
       </form>
     </main>
     <footer class="page-footer">
-      <section class="partnership partnership--form ">
+      <section class="partnership">
         <div class="partnership__wrapper">
           <h3 class="partnership__invite">приглашаем
 к сотрудничеству дилеров!</h3>
@@ -118,7 +126,7 @@
           </p>
         </div>
       </section>
-      <div class="page-footer__map-wrapper">map
+      <div class="page-footer__map-wrapper" id="map">
       </div>
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
@@ -133,5 +141,8 @@
         </div>
       </div>
     </footer>
+    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
+
