--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Кэт энерджи</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -9,8 +10,15 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrapper">
-        <img class="page-header__icon" src="img/icon-logo-mobile.svg" alt="Логотип Cat Energy">
-        <a class="page-header__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
+        <a class="page-header__logo-adaptive" href="#">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__icon" src="img/logo-mobile.png" alt="Логотип Cat Energy">
+          </picture>
+        </a>
+        <a class="page-header__logo" href="#">
+          <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <label class="page-header__menu-button" for="menu_switch"></label>
       </div>
       <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
@@ -122,7 +130,7 @@
           </p>
         </div>
       </section>
-      <div class="page-footer__map-wrapper">map
+      <div class="page-footer__map-wrapper" id="map">
       </div>
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
@@ -137,5 +145,7 @@
         </div>
       </div>
     </footer>
+    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
