--- a/source/catalog.html
+++ b/source/catalog.html
@@ -28,7 +28,7 @@
             <li class="main-nav__item main-nav__item--black">
               <a href="index.html">Главная</a>
             </li>
-            <li class="main-nav__item main-nav__item--active main-nav__item--black">
+            <li class="main-nav__item main-nav__item--active-black main-nav__item--black">
               <a>Каталог продукции</a>
             </li>
             <li class="main-nav__item main-nav__item--black">
