--- a/source/form.html
+++ b/source/form.html
@@ -28,10 +28,10 @@
             <li class="main-nav__item main-nav__item--black">
               <a href="index.html">Главная</a>
             </li>
-            <li class="main-nav__item main-nav__item--active main-nav__item--black">
+            <li class="main-nav__item  main-nav__item--black">
               <a href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="main-nav__item main-nav__item--active main-nav__item--black">
+            <li class="main-nav__item main-nav__item--active-black main-nav__item--black">
               <a>Подбор программы</a>
             </li>
           </ul>
