--- a/source/index.html
+++ b/source/index.html
@@ -19,12 +19,12 @@
         </a>
         <a class="page-header__logo" href="#">
           <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
-        <label class="page-header__menu-button" for="menu_switch"></label>
+        <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch"  tabindex="0"></label>
       </div>
       <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
       <div class="page-header__nav-wrapper">
         <nav class="page-header__nav main-nav">
-          <ul class="main-nav__list ">
+          <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
               <a>Главная</a>
             </li>
@@ -42,7 +42,7 @@
       <div class="promo__wrapper">
         <h2 class="promo__caption">Функциональное питание для котов</h2>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <a class="promo__button button" href="#">Подобрать Программу</a>
+        <a class="promo__button button" href="form.html">Подобрать Программу</a>
       </div>
     </section>
     <main class="page-main">
@@ -53,7 +53,7 @@
           <p class="targets__description">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a class="targets__button" href="#">Каталог Slim</a>
+          <a class="targets__button" href="catalog-slim.html">Каталог Slim</a>
         </div>
         <div class="targets__item">
           <h3 class="targets__title targets__title--mass">Набор массы</h3>
@@ -61,7 +61,7 @@
             Заработать авторитет среди дворовых котов
             и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a class="targets__button" href="#">Каталог Pro</a>
+          <a class="targets__button" href="catalog-pro.html">Каталог Pro</a>
         </div>
       </section>
       <section class="product-description">
@@ -133,19 +133,31 @@
       <div class="page-footer__map-wrapper" id="map">
       </div>
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo" href="#"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
+        <a class="page-footer__logo" href="#" tabindex="0"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <div class="page-footer__social social">
-          <a class="social__link social__link--vkontakte" href="#"></a>
-          <a class="social__link social__link--instagram" href="#"></a>
-          <a class="social__link social__link--facebook" href="#"></a>
+          <a class="social__link social__link--vkontakte" href="#" tabindex="0"></a>
+          <a class="social__link social__link--instagram" href="#" tabindex="0"></a>
+          <a class="social__link social__link--facebook" href="#" tabindex="0"></a>
         </div>
         <div class="page-footer__developers developers">
-          <a class="developers__item developers__item--text" href="#">HTML Academy</a>
-          <a class="developers__item developers__item--logo" href="#"></a>
+          <a class="developers__item developers__item--text" href="#" tabindex="0">HTML Academy</a>
+          <a class="developers__item developers__item--logo" href="#" tabindex="0"></a>
         </div>
       </div>
     </footer>
     <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
+    <script>
+      var navToggle = document.querySelector('.page-header__menu-button');
+      navToggle.addEventListener('click', function() {
+        if (navToggle.classList.contains('page-header__menu-button--closed')) {
+        navToggle.classList.add('page-header__menu-button--opened');
+        navToggle.classList.remove('page-header__menu-button--closed');
+        }else{
+          navToggle.classList.remove('page-header__menu-button--opened');
+          navToggle.classList.add('page-header__menu-button--closed');
+        };
+      });
+    </script>
   </body>
 </html>
