--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
           <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch" tabindex="0"></label>
       </div>
-      <input type="checkbox" id="menu_switch"class="visually-hidden menu_switch">
+      <input type="checkbox" id="menu_switch" class="visually-hidden menu_switch">
       <div class="page-header__nav-wrapper">
         <nav class="page-header__nav main-nav">
           <ul class="main-nav__list ">
@@ -94,19 +94,19 @@
           <h2 class="extra__caption">Дополнительно</h2>
           <div class="extra__item-wrapper">
             <label>
-            <input type="checkbox" id="extra__checkbox1" name="extra" value="sweetener" checked>
+            <input type="checkbox" id="extra__checkbox1"  class="extra__checkbox1" name="extra" value="sweetener" checked>
               <span class="extra__item extra__item--1" tabindex="0">сахарозаменитель</span>
             </label>
             <label>
-            <input type="checkbox" id="extra__checkbox2" name="extra" value="water">
+            <input type="checkbox" id="extra__checkbox2" class="extra__checkbox2" name="extra" value="water">
               <span class="extra__item extra__item--2" tabindex="0">питьевая вода</span>
             </label>
             <label>
-            <input type="checkbox" id="extra__checkbox3" name="extra" value="milk">
+            <input type="checkbox" id="extra__checkbox3" class="extra__checkbox3" name="extra" value="milk">
               <span class="extra__item extra__item--3" tabindex="0">молоко</span>
             </label>
             <label>
-            <input type="checkbox" id="extra__checkbox4" name="extra" value="vitamins">
+            <input type="checkbox" id="extra__checkbox4" class="extra__checkbox4" name="extra" value="vitamins">
               <span class="extra__item extra__item--4" tabindex="0">витамины</span>
             </label>
           </div>
