работа над замечаниями

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -341,6 +341,7 @@
     </footer>
     <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/picturefill.min.js" type="text/javascript"></script>
     <script>
       var navToggle = document.querySelector('.page-header__menu-button');
       navToggle.addEventListener('click', function() {
