--- a/source/form.html
+++ b/source/form.html
@@ -10,14 +10,14 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="page-header__logo-adaptive" href="#">
+        <a class="page-header__logo-adaptive" href="index.html">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="page-header__icon" src="img/logo-mobile.png" alt="Логотип Cat Energy">
           </picture>
         </a>
-        <a class="page-header__logo" href="#">
+        <a class="page-header__logo" href="index.html">
           <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch" tabindex="0"></label>
       </div>
@@ -136,8 +136,8 @@
           <a class="social__link social__link--facebook" href="#" tabindex="0"></a>
         </div>
         <div class="page-footer__developers developers">
-          <a class="developers__item developers__item--text" href="#" tabindex="0">HTML Academy</a>
-          <a class="developers__item developers__item--logo" href="#" tabindex="0"></a>
+          <a class="developers__item developers__item--text" href="https://htmlacademy.ru/intensive/adaptive" tabindex="0">HTML Academy</a>
+          <a class="developers__item developers__item--logo" href="https://htmlacademy.ru/intensive/adaptive" tabindex="0"></a>
         </div>
       </div>
     </footer>
